--- a/node-hunter-android/app/src/main/res/layout/activity_show_main_menu.xml
+++ b/node-hunter-android/app/src/main/res/layout/activity_show_main_menu.xml
@@ -3,7 +3,14 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ShowMainMenuActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ShowMainMenuActivity"
+    android:orientation="vertical">
+
+    <CheckBox
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="VR Mode"
+        android:id="@+id/chkVRMode" />
 
     <Button
         android:layout_width="fill_parent"
