Enable some basic Normal Mapping into the Android Version
At last!

--- a/node-hunter-android/app/src/main/res/layout/activity_show_main_menu.xml
+++ b/node-hunter-android/app/src/main/res/layout/activity_show_main_menu.xml
@@ -12,12 +12,12 @@
         android:text="VR Mode"
         android:id="@+id/chkVRMode" />
 
-    <CheckBox
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Connect to multiplayer server"
-        android:id="@+id/chkMultiplayer"
-        android:checked="false" />
+    <!--<CheckBox-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Connect to multiplayer server"-->
+        <!--android:id="@+id/chkMultiplayer"-->
+        <!--android:checked="false" />-->
 
     <Button
         android:layout_width="fill_parent"
